// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render colors - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="colors"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="colors_input"
      title="colors"
    >
      <span
        class="emotion-3"
      >
        colors
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="block-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); box-shadow: 0 1px rgba(0,0,0,.1); border-radius: 6px; position: relative;"
        >
          <div
            style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px 10px; border-color: transparent transparent #000000 transparent; position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
          />
          <div
            style="height: 110px; background: rgb(0, 0, 0); border-radius: 6px 6px 0 0; display: flex; align-items: center; justify-content: center; position: relative;"
          >
            <div
              style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
            >
              #000000
            </div>
          </div>
          <div
            style="padding: 10px;"
          >
            <div
              style="margin-right: -10px;"
            >
              <span>
                <div
                  style="background: rgb(18, 52, 86); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#123456"
                />
              </span>
              <span>
                <div
                  style="background: rgb(171, 195, 69); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#abc345"
                />
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-3"
                spellcheck="false"
                style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; box-shadow: inset 0 0 0 1px #ddd; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
                value="#000000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="default"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="default_input"
      title="default"
    >
      <span
        class="emotion-3"
      >
        default
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="block-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); box-shadow: 0 1px rgba(0,0,0,.1); border-radius: 6px; position: relative;"
        >
          <div
            style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px 10px; border-color: transparent transparent #000000 transparent; position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
          />
          <div
            style="height: 110px; background: rgb(0, 0, 0); border-radius: 6px 6px 0 0; display: flex; align-items: center; justify-content: center; position: relative;"
          >
            <div
              style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
            >
              #000000
            </div>
          </div>
          <div
            style="padding: 10px;"
          >
            <div
              style="margin-right: -10px;"
            >
              <span>
                <div
                  style="background: rgb(217, 227, 240); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#D9E3F0"
                />
              </span>
              <span>
                <div
                  style="background: rgb(244, 115, 115); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#F47373"
                />
              </span>
              <span>
                <div
                  style="background: rgb(105, 118, 137); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#697689"
                />
              </span>
              <span>
                <div
                  style="background: rgb(55, 214, 122); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#37D67A"
                />
              </span>
              <span>
                <div
                  style="background: rgb(44, 204, 228); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#2CCCE4"
                />
              </span>
              <span>
                <div
                  style="background: rgb(85, 85, 85); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#555555"
                />
              </span>
              <span>
                <div
                  style="background: rgb(220, 231, 117); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#dce775"
                />
              </span>
              <span>
                <div
                  style="background: rgb(255, 138, 101); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ff8a65"
                />
              </span>
              <span>
                <div
                  style="background: rgb(186, 104, 200); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ba68c8"
                />
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-1"
                spellcheck="false"
                style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; box-shadow: inset 0 0 0 1px #ddd; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
                value="#000000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render defaultColor - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="defaultColor"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="defaultColor_input"
      title="defaultColor"
    >
      <span
        class="emotion-3"
      >
        defaultColor
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="block-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); box-shadow: 0 1px rgba(0,0,0,.1); border-radius: 6px; position: relative;"
        >
          <div
            style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px 10px; border-color: transparent transparent #ff0000 transparent; position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
          />
          <div
            style="height: 110px; background: rgb(255, 0, 0); border-radius: 6px 6px 0 0; display: flex; align-items: center; justify-content: center; position: relative;"
          >
            <div
              style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
            >
              #ff0000
            </div>
          </div>
          <div
            style="padding: 10px;"
          >
            <div
              style="margin-right: -10px;"
            >
              <span>
                <div
                  style="background: rgb(217, 227, 240); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#D9E3F0"
                />
              </span>
              <span>
                <div
                  style="background: rgb(244, 115, 115); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#F47373"
                />
              </span>
              <span>
                <div
                  style="background: rgb(105, 118, 137); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#697689"
                />
              </span>
              <span>
                <div
                  style="background: rgb(55, 214, 122); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#37D67A"
                />
              </span>
              <span>
                <div
                  style="background: rgb(44, 204, 228); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#2CCCE4"
                />
              </span>
              <span>
                <div
                  style="background: rgb(85, 85, 85); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#555555"
                />
              </span>
              <span>
                <div
                  style="background: rgb(220, 231, 117); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#dce775"
                />
              </span>
              <span>
                <div
                  style="background: rgb(255, 138, 101); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ff8a65"
                />
              </span>
              <span>
                <div
                  style="background: rgb(186, 104, 200); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ba68c8"
                />
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-4"
                spellcheck="false"
                style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; box-shadow: inset 0 0 0 1px #ddd; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
                value="#FF0000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render inputStyle - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
  border: 3px solid blue;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="inputStyle"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="inputStyle_input"
      title="inputStyle"
    >
      <span
        class="emotion-3"
      >
        inputStyle
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="block-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); box-shadow: 0 1px rgba(0,0,0,.1); border-radius: 6px; position: relative;"
        >
          <div
            style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px 10px; border-color: transparent transparent #000000 transparent; position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
          />
          <div
            style="height: 110px; background: rgb(0, 0, 0); border-radius: 6px 6px 0 0; display: flex; align-items: center; justify-content: center; position: relative;"
          >
            <div
              style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
            >
              #000000
            </div>
          </div>
          <div
            style="padding: 10px;"
          >
            <div
              style="margin-right: -10px;"
            >
              <span>
                <div
                  style="background: rgb(217, 227, 240); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#D9E3F0"
                />
              </span>
              <span>
                <div
                  style="background: rgb(244, 115, 115); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#F47373"
                />
              </span>
              <span>
                <div
                  style="background: rgb(105, 118, 137); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#697689"
                />
              </span>
              <span>
                <div
                  style="background: rgb(55, 214, 122); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#37D67A"
                />
              </span>
              <span>
                <div
                  style="background: rgb(44, 204, 228); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#2CCCE4"
                />
              </span>
              <span>
                <div
                  style="background: rgb(85, 85, 85); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#555555"
                />
              </span>
              <span>
                <div
                  style="background: rgb(220, 231, 117); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#dce775"
                />
              </span>
              <span>
                <div
                  style="background: rgb(255, 138, 101); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ff8a65"
                />
              </span>
              <span>
                <div
                  style="background: rgb(186, 104, 200); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ba68c8"
                />
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-5"
                spellcheck="false"
                style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; box-shadow: inset 0 0 0 1px #ddd; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
                value="#000000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render label-disabled - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="label-disabled"
>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="block-picker emotion-1"
          style="width: 100%; background: rgb(255, 255, 255); box-shadow: 0 1px rgba(0,0,0,.1); border-radius: 6px; position: relative;"
        >
          <div
            style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px 10px; border-color: transparent transparent #000000 transparent; position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
          />
          <div
            style="height: 110px; background: rgb(0, 0, 0); border-radius: 6px 6px 0 0; display: flex; align-items: center; justify-content: center; position: relative;"
          >
            <div
              style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
            >
              #000000
            </div>
          </div>
          <div
            style="padding: 10px;"
          >
            <div
              style="margin-right: -10px;"
            >
              <span>
                <div
                  style="background: rgb(217, 227, 240); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#D9E3F0"
                />
              </span>
              <span>
                <div
                  style="background: rgb(244, 115, 115); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#F47373"
                />
              </span>
              <span>
                <div
                  style="background: rgb(105, 118, 137); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#697689"
                />
              </span>
              <span>
                <div
                  style="background: rgb(55, 214, 122); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#37D67A"
                />
              </span>
              <span>
                <div
                  style="background: rgb(44, 204, 228); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#2CCCE4"
                />
              </span>
              <span>
                <div
                  style="background: rgb(85, 85, 85); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#555555"
                />
              </span>
              <span>
                <div
                  style="background: rgb(220, 231, 117); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#dce775"
                />
              </span>
              <span>
                <div
                  style="background: rgb(255, 138, 101); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ff8a65"
                />
              </span>
              <span>
                <div
                  style="background: rgb(186, 104, 200); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ba68c8"
                />
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-7"
                spellcheck="false"
                style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; box-shadow: inset 0 0 0 1px #ddd; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
                value="#000000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render title - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="title"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="title_input"
      title="The color selector"
    >
      <span
        class="emotion-3"
      >
        The color selector
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="block-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); box-shadow: 0 1px rgba(0,0,0,.1); border-radius: 6px; position: relative;"
        >
          <div
            style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px 10px; border-color: transparent transparent #000000 transparent; position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
          />
          <div
            style="height: 110px; background: rgb(0, 0, 0); border-radius: 6px 6px 0 0; display: flex; align-items: center; justify-content: center; position: relative;"
          >
            <div
              style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
            >
              #000000
            </div>
          </div>
          <div
            style="padding: 10px;"
          >
            <div
              style="margin-right: -10px;"
            >
              <span>
                <div
                  style="background: rgb(217, 227, 240); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#D9E3F0"
                />
              </span>
              <span>
                <div
                  style="background: rgb(244, 115, 115); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#F47373"
                />
              </span>
              <span>
                <div
                  style="background: rgb(105, 118, 137); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#697689"
                />
              </span>
              <span>
                <div
                  style="background: rgb(55, 214, 122); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#37D67A"
                />
              </span>
              <span>
                <div
                  style="background: rgb(44, 204, 228); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#2CCCE4"
                />
              </span>
              <span>
                <div
                  style="background: rgb(85, 85, 85); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#555555"
                />
              </span>
              <span>
                <div
                  style="background: rgb(220, 231, 117); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#dce775"
                />
              </span>
              <span>
                <div
                  style="background: rgb(255, 138, 101); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ff8a65"
                />
              </span>
              <span>
                <div
                  style="background: rgb(186, 104, 200); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ba68c8"
                />
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-2"
                spellcheck="false"
                style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; box-shadow: inset 0 0 0 1px #ddd; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
                value="#000000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render width - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="width"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="width_input"
      title="width"
    >
      <span
        class="emotion-3"
      >
        width
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="block-picker emotion-4"
          style="width: 200px; background: rgb(255, 255, 255); box-shadow: 0 1px rgba(0,0,0,.1); border-radius: 6px; position: relative;"
        >
          <div
            style="width: 0px; height: 0px; border-style: solid; border-width: 0px 10px 10px 10px; border-color: transparent transparent #000000 transparent; position: absolute; top: -10px; left: 50%; margin-left: -10px; display: none;"
          />
          <div
            style="height: 110px; background: rgb(0, 0, 0); border-radius: 6px 6px 0 0; display: flex; align-items: center; justify-content: center; position: relative;"
          >
            <div
              style="font-size: 18px; color: rgb(255, 255, 255); position: relative;"
            >
              #000000
            </div>
          </div>
          <div
            style="padding: 10px;"
          >
            <div
              style="margin-right: -10px;"
            >
              <span>
                <div
                  style="background: rgb(217, 227, 240); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#D9E3F0"
                />
              </span>
              <span>
                <div
                  style="background: rgb(244, 115, 115); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#F47373"
                />
              </span>
              <span>
                <div
                  style="background: rgb(105, 118, 137); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#697689"
                />
              </span>
              <span>
                <div
                  style="background: rgb(55, 214, 122); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#37D67A"
                />
              </span>
              <span>
                <div
                  style="background: rgb(44, 204, 228); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#2CCCE4"
                />
              </span>
              <span>
                <div
                  style="background: rgb(85, 85, 85); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#555555"
                />
              </span>
              <span>
                <div
                  style="background: rgb(220, 231, 117); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#dce775"
                />
              </span>
              <span>
                <div
                  style="background: rgb(255, 138, 101); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ff8a65"
                />
              </span>
              <span>
                <div
                  style="background: rgb(186, 104, 200); height: 22px; width: 22px; cursor: pointer; position: relative; outline: none; float: left; margin-right: 10px; margin-bottom: 10px; border-radius: 4px;"
                  tabindex="0"
                  title="#ba68c8"
                />
              </span>
              <div
                style="clear: both;"
              />
            </div>
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-6"
                spellcheck="false"
                style="width: 100%; font-size: 12px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 22px; box-shadow: inset 0 0 0 1px #ddd; border-radius: 4px; padding: 0px 7px; box-sizing: border-box;"
                value="#000000"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema colors 1`] = `true`;

exports[`Test Schema colors 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema defaultColor 1`] = `true`;

exports[`Test Schema defaultColor 2`] = `null`;

exports[`Test Schema inputStyle 1`] = `true`;

exports[`Test Schema inputStyle 2`] = `null`;

exports[`Test Schema label-disabled 1`] = `true`;

exports[`Test Schema label-disabled 2`] = `null`;

exports[`Test Schema title 1`] = `true`;

exports[`Test Schema title 2`] = `null`;

exports[`Test Schema width 1`] = `true`;

exports[`Test Schema width 2`] = `null`;
